[package]
name = "g5k"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "query"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["jobs"]
jobs = []
